examples/negative/effects_phase2/m7b_1_alias_non_effect.kai
# m7b #1 negative — alias body mixes effect labels with a non-effect
# type. The explicit `+` form is unambiguously an effect alias; any
# label that does not name a declared (or builtin) effect must be
# rejected with `unknown effect in alias body`.

type Bad = Console + Int

fn main() : Int { 0 }
