examples/negative/effects_phase2/m7b_1_alias_non_effect.err.expected
error: unknown effect in alias body: Int (declared as part of `Bad`)
  --> examples/negative/effects_phase2/m7b_1_alias_non_effect.kai:6:1
    |
  6 | type Bad = Console + Int
    | ^
